fix core host for production

--- a/content/payments/umap/mandates/generic/pause.mdx
+++ b/content/payments/umap/mandates/generic/pause.mdx
@@ -54,7 +54,7 @@ Once notified on the mandate pause request, merchants can use this API to check 
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
