--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -85,7 +85,7 @@ with the correct set of parameters. <br></br>
             <th>Staging host</th>
             <td>
                 <code>
-                    https://umap-dev-core.setu.co/api
+                    https://umap.setu.co/api
                 </code>
             </td>
         </tr>
@@ -203,7 +203,7 @@ In addition to the notifications sent by UMAP, a merchant can use this API to ch
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
