--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -70,7 +70,7 @@ After receiving pause operation initiated notification, the merchant can use thi
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
