--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -48,7 +48,7 @@ There are only two updates possible on a UPI mandate
                                 <th>Staging host</th>
                                 <td>
                                     <code>
-                                        https://umap-dev-core.setu.co/api
+                                        https://umap.setu.co/api
                                     </code>
                                 </td>
                             </tr>
@@ -194,7 +194,7 @@ There are only two updates possible on a UPI mandate
                                 <th>Staging host</th>
                                 <td>
                                     <code>
-                                        https://umap-dev-core.setu.co/api
+                                        https://umap.setu.co/api
                                     </code>
                                 </td>
                             </tr>
@@ -320,7 +320,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
