--- a/content/payments/umap/mandates/one-shot/create.mdx
+++ b/content/payments/umap/mandates/one-shot/create.mdx
@@ -36,7 +36,7 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
               <tr>
                 <th>Staging host</th>
                 <td>
-                  <code>https://umap-dev-core.setu.co/api</code>
+                  <code>https://umap.setu.co/api</code>
                 </td>
               </tr>
               <tr>
@@ -267,7 +267,7 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
               <tr>
                 <th>Staging host</th>
                 <td>
-                  <code>https://umap-dev-core.setu.co/api</code>
+                  <code>https://umap.setu.co/api</code>
                 </td>
               </tr>
               <tr>
@@ -478,7 +478,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
