--- a/content/payments/umap/mandates/one-shot/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/one-shot/pre-debit-notify.mdx
@@ -39,7 +39,7 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
@@ -184,7 +184,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
