--- a/content/payments/umap/mandates/recur/create.mdx
+++ b/content/payments/umap/mandates/recur/create.mdx
@@ -36,7 +36,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
               <tr>
                 <th>Staging host</th>
                 <td>
-                  <code>https://umap-dev-core.setu.co/api</code>
+                  <code>https://umap.setu.co/api</code>
                 </td>
               </tr>
               <tr>
@@ -387,7 +387,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
               <tr>
                 <th>Staging host</th>
                 <td>
-                  <code>https://umap-dev-core.setu.co/api</code>
+                  <code>https://umap.setu.co/api</code>
                 </td>
               </tr>
               <tr>
@@ -719,7 +719,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
