--- a/content/payments/umap/mandates/reserve-plus/create.mdx
+++ b/content/payments/umap/mandates/reserve-plus/create.mdx
@@ -19,7 +19,7 @@ visible_in_sidebar: true
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
@@ -258,7 +258,7 @@ A merchant can use this API to check the status of a mandate (this is an alterna
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
