--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -35,7 +35,7 @@ Use the following API to check if it is already associated with another merchant
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
