--- a/content/payments/umap/payments/collect/check-status.mdx
+++ b/content/payments/umap/payments/collect/check-status.mdx
@@ -14,7 +14,7 @@ This is a generic payment status api, that accepts the id of the collect request
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
