--- a/content/payments/umap/payments/collect/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect/create-collect-request.mdx
@@ -14,7 +14,7 @@ This API can be used to create a collect request that initiates a UPI transactio
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
@@ -120,7 +120,7 @@ Since collect request directly initiates a transaction on customer's UPI app. Th
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
