--- a/content/payments/umap/mandates/one-shot/check-status.mdx
+++ b/content/payments/umap/mandates/one-shot/check-status.mdx
@@ -23,7 +23,7 @@ The merchant can use the **<i>check status API</i>** to check mandate payment st
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
