--- a/content/payments/umap/mandates/one-shot/execute.mdx
+++ b/content/payments/umap/mandates/one-shot/execute.mdx
@@ -25,7 +25,7 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
@@ -159,7 +159,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
