--- a/content/payments/umap/mandates/reserve-plus/check-status.mdx
+++ b/content/payments/umap/mandates/reserve-plus/check-status.mdx
@@ -33,7 +33,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
               <tr>
                 <th>Staging host</th>
                 <td>
-                  <code>https://umap-dev-core.setu.co/api</code>
+                  <code>https://umap.setu.co/api</code>
                 </td>
               </tr>
               <tr>
@@ -121,7 +121,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
               <tr>
                 <th>Staging host</th>
                 <td>
-                  <code>https://umap-dev-core.setu.co/api</code>
+                  <code>https://umap.setu.co/api</code>
                 </td>
               </tr>
               <tr>
