--- a/content/payments/umap/payments/flash/check-status.mdx
+++ b/content/payments/umap/payments/flash/check-status.mdx
@@ -12,7 +12,7 @@ This is a generic payment status api, that accepts the id of the payment-link to
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -105,7 +105,7 @@ This is a generic payment status api, that accepts the id of the payment-link an
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
