--- a/content/payments/umap/payments/flash/create-payment-link.mdx
+++ b/content/payments/umap/payments/flash/create-payment-link.mdx
@@ -20,7 +20,7 @@ visible_in_sidebar: true
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
@@ -197,7 +197,7 @@ visible_in_sidebar: true
     <tr>
       <th>Staging host</th>
       <td>
-        <code>https://umap-dev-core.setu.co/api</code>
+        <code>https://umap.setu.co/api</code>
       </td>
     </tr>
     <tr>
