--- a/content/payments/umap/payments/tpv/check-status.mdx
+++ b/content/payments/umap/payments/tpv/check-status.mdx
@@ -15,7 +15,7 @@ visible_in_sidebar: true
         <tr>
             <th>Staging host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api</code>
+                <code>https://umap.setu.co/api</code>
             </td>
         </tr>
         <tr>
