update payment failed notification status for UPIDL

--- a/content/payments/upi-deeplinks/notifications.mdx
+++ b/content/payments/upi-deeplinks/notifications.mdx
@@ -22,7 +22,7 @@ After Setu receives a callback from the bank for a particular payment, we send a
 #### Payment successful notification
 
 <CodeBlockWithCopy language="json">
-  {`
+	{`
 {
   "partnerDetails": {
     "appID": "861023031961584801",
@@ -80,7 +80,7 @@ A payment can fail for multiple reasons as explained below:
 <br />
 
 <CodeBlockWithCopy language="json">
-  {`
+	{`
 {
   "partnerDetails": {
     "appID": "861023031961584801",
@@ -350,6 +350,33 @@ Merchants receive notifications if a payment attempt fails due to incorrect UPI 
         </td>
       </tr>
       <tr>
+        <td>Z9</td>
+        <td>INSUFFICIENT FUNDS IN CUSTOMER (REMITTER) ACCOUNT</td>
+        <td>The customer's account has insufficient funds to complete the transaction.</td>
+        <td>
+        Inform the customer about the insufficient funds. 
+        Advise them to ensure sufficient balance in their account and retry the transaction.
+        </td>
+      </tr>
+      <tr>
+        <td>ZM</td>
+        <td>INCORRECT / INVALID MPIN</td>
+        <td>The UPI MPIN entered by the customer is incorrect or invalid.</td>
+        <td>
+        Inform the customer that their MPIN is incorrect or invalid. Suggest they verify their MPIN and retry the transaction. 
+        If the issue persists, they may need to reset their MPIN or contact their bank for assistance.
+        </td>
+      </tr>
+      <tr>
+        <td>Y1</td>
+        <td>BENEFICIARY CBS OFFLINE</td>
+        <td>The Core Banking System (CBS) of the beneficiary's bank is currently offline.</td>
+        <td>
+        Inform the customer that the beneficiary's bank system is offline.
+        Recommend that they try the transaction again later.
+        </td>
+      </tr>
+      <tr>
         <td>U01</td>
         <td>THE REQUEST IS DUPLICATE</td>
         <td>Duplicate transaction request.</td>
@@ -359,6 +386,7 @@ Merchants receive notifications if a payment attempt fails due to incorrect UPI 
         </td>
       </tr>
     </table>
+
   </details>
 </Card>
 
@@ -367,7 +395,7 @@ Merchants receive notifications if a payment attempt fails due to incorrect UPI 
 The bill created won’t expire, allowing customers to retry the payment.
 
 <CodeBlockWithCopy language="json">
-  {`
+	{`
 {
   "partnerDetails": {
     "appID": "1115232834412348749",
@@ -413,7 +441,7 @@ The bill created won’t expire, allowing customers to retry the payment.
 A `SETTLEMENT_SUCCESSFUL` notification is sent to the merchant after successful payments from Setu to the merchant. This depends on the settlement frequency agreed upon between Setu and the merchant.
 
 <CodeBlockWithCopy language="json">
-  {`{
+	{`{
      "partnerDetails": {
         "appID": "string",  // your unique app ID in Setu system, this is constant
         "productInstanceID": "string"  // your unique product instance ID in Setu system, this is constant
@@ -455,7 +483,7 @@ Refunds are initiated in batch, along with settlements. A batch notification is 
 The refunds array in the notification provides the details of all transactions for which refund is initiated.
 
 <CodeBlockWithCopy language="json">
-  {`{
+	{`{
 	"partnerDetails": {
 		"appID": "799310436687152247",
 		"productInstanceID": "799310436687152247"
