--- a/content/data/account-aggregator/api-integration/notifications.mdx
+++ b/content/data/account-aggregator/api-integration/notifications.mdx
@@ -28,7 +28,7 @@ This notification is used to communicate the updated status of the consent. We d
 
 | ** Consent status** | **Explanation**                                            |
 | ------------------- | ---------------------------------------------------------- |
-| `PENDING`           | The consent has been and customer action is awaited        |
+| `PENDING`           | The consent has been created and customer action is awaited        |
 | `ACTIVE`            | Customer has approved the consent                          |
 | `REJECTED`          | Customer has rejected consent                              |
 | `REVOKED`           | Customer has revoked consent which was previously approved |
