update payment notification spec with tpv changes

--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -19,9 +19,9 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <table>
     <tr>
-        <th>Staging host</th>
-        <td>
-            <code>https://accountservice-dev.setu.co</code>
+        <th>Host</th>
+        <td>            
+            <code>https://accountservice.setu.co</code>
         </td>
     </tr>
     <tr>
@@ -74,7 +74,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 ###### How to use the access token
 
--   Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `authorization` request header as `Bearer <token-value>`.
+-   Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `Authorization` request header as `Bearer <access_token>`.
 -   To get the new token, call the same `login` API at the 4th minute of token expiry and get the new token for the further API calls.
 
 <hr class="primary" />
