--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -58,14 +58,11 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
       <th>Header</th>
       <td>
         <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-        Generate this token using{" "}
-        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
-          OAuth
+        
+        {" "}
+        <a href="/payments/umap/api-integration" target="_blank">
+          Generate an access token
         </a>{" "}
-        or{" "}
-        <a href="/payments/upi-deeplinks/resources/jwt" target="_self">
-          JWT
-        </a>
         .<br />
         <br />
         <code>Content-Type</code>—will be <code>application/json</code>
