--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -34,7 +34,7 @@ As a merchant, you can integrate with UMAP by directly registering on Setu's Bri
 
 ###### Step 2 - Get API credentials
 
-Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
+Contact Setu on <a href="">umap@setu.co</a> to get `client-id` and `secret`. These credentials are required to make API calls on sandbox or production.
 
 <hr class="primary" />
 
