--- a/content/payments/umap/payments/flash/create-payment-link.mdx
+++ b/content/payments/umap/payments/flash/create-payment-link.mdx
@@ -18,7 +18,7 @@ visible_in_sidebar: true
 <table>
   <tbody>
     <tr>
-      <th>Staging host</th>
+      <th>Host</th>
       <td>
         <code>https://umap.setu.co/api</code>
       </td>
@@ -32,7 +32,7 @@ visible_in_sidebar: true
     <tr>
       <th>Path</th>
       <td>
-        <code>/v1/merchants/payment-links</code>
+        <code>/v1/merchants/dqr</code>
       </td>
     </tr>
     <tr>
@@ -195,7 +195,7 @@ visible_in_sidebar: true
 <table>
   <tbody>
     <tr>
-      <th>Staging host</th>
+      <th>Host</th>
       <td>
         <code>https://umap.setu.co/api</code>
       </td>
@@ -209,7 +209,7 @@ visible_in_sidebar: true
     <tr>
       <th>Path</th>
       <td>
-        <code>/v1/merchants/payment-links/&#123;id&#125;</code>
+        <code>/v1/merchants/dqr/&#123;id&#125;</code>
       </td>
     </tr>
     <tr>
