--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -39,7 +39,7 @@ As an aggregator, the first step for you is to interact with Setu’s sales team
 
 ###### Step 2 — Get API credentials
 
-Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
+Contact Setu on <a href="">umap@setu.co</a> to get `client-id` and `secret`. These credentials are required to make API calls on sandbox or production.
 
 <hr class="primary" />
 
