update umpa api request & response samples

--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -107,7 +107,7 @@ There are only two updates possible on a UPI mandate
         "endDate": "02012006",
         "expireAfter": 120,
         "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-        "intentLink": "upi://mandate?pa=deku040920232@okokaxis&validitystart=31121995&validityend=02012006&am=10.00&amrule=max&recur=one%20time&cu=INR&mc=1234&mode=01&purpose=14&rev=Y&block=N&txnType=UPDATE&umn=SETUS7mxYHK1A6yXhxJsoKM7yxKqC2r0&tid=SETM3Iij4WQrtEUbOUFkTpQp2EpR5wqy5Ou",
+        "intentLink": "upi://mandate?pa=deku040920232@pineaxis&validitystart=31121995&validityend=02012006&am=10.00&amrule=max&recur=one%20time&cu=INR&mc=1234&mode=01&purpose=14&rev=Y&block=N&txnType=UPDATE&umn=SETUS7mxYHK1A6yXhxJsoKM7yxKqC2r0&tid=SETM3Iij4WQrtEUbOUFkTpQp2EpR5wqy5Ou",
         "mandateId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
         "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
         "merchantReferenceId": "ABC1234789",
