--- a/content/payments/umap/mandates/recur/check-status.mdx
+++ b/content/payments/umap/mandates/recur/check-status.mdx
@@ -77,11 +77,11 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
     "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
     "currency": "INR",
     "customerAccountType": "savings",
-    "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
+    "customerVpa": "test-auto-tyvmm59i9b@pineaxis",
     "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
     "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
     "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-    "merchantVpa": "test-auto-beibfev2oq@okokaxis",
+    "merchantVpa": "test-auto-beibfev2oq@pineaxis",
     "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
     "refId": "1240689979139556558",
     "rrn": "124068997913",
@@ -167,11 +167,11 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
       "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
       "currency": "INR",
       "customerAccountType": "savings",
-      "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
+      "customerVpa": "test-auto-tyvmm59i9b@pineaxis",
       "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
       "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
       "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-      "merchantVpa": "test-auto-beibfev2oq@okokaxis",
+      "merchantVpa": "test-auto-beibfev2oq@pineaxis",
       "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
       "refId": "1240689979139556558",
       "requestId": "cjqml1f2e5ocq2mesej0",
@@ -185,11 +185,11 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
       "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
       "currency": "INR",
       "customerAccountType": "savings",
-      "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
+      "customerVpa": "test-auto-tyvmm59i9b@pineaxis",
       "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
       "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
       "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-      "merchantVpa": "test-auto-beibfev2oq@okokaxis",
+      "merchantVpa": "test-auto-beibfev2oq@pineaxis",
       "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
       "refId": "1240689979139556558",
       "requestId": "cjqml1f2e5ocq2mesej0",
