--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -89,7 +89,7 @@ Use the following API to check if it is already associated with another merchant
 
 <CodeBlockWithCopy language="json">
   {`{
-    "vpa": "deku@okokaxis"
+    "vpa": "fastestupi@pineaxis"
 }`}
 </CodeBlockWithCopy>
 
