--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -91,15 +91,14 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
     "acceptDeemedTxns": true,
     "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22"
     "aggregatorAccountId": "328a928f-e277-4798-8e28-4b19a61a8a23",
-    "businessName": "deku",
+    "businessName": "Setu",
     "businessType": "PUBLIC",
-    "franchiseName": "deku",
+    "franchiseName": "Setu",
     "genre": "ONLINE",
-    "legalName": "deku",
+    "legalName": "BrokenTusk Technologies Pvt Ltd",
     "mcc": "5432",
-    "merchantName": "deku",
-    "merchantType": "small",
-    "on-boardingType": "bank",
+    "merchantType": "large",
+    "onboardingType": "aggregator",
     "paymentModes": [
         "savings",
         "lite",
@@ -107,14 +106,14 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
         "rupay_cc"
     ],
     "products": [
-        "deeplinks",
-        "sqr",
-        "mqr"
+      "autopay",
+      "pay_singe_tpv",
+      "pay_multi",
+      "pay_single"
     ],
     "vpaHandles": [
-        "okaxis",
-        "okhdfc"
-    ]
+        "pineaxis"
+      ]
 }`}
 </CodeBlockWithCopy>
 
@@ -124,19 +123,18 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
   {`{
   "acceptDeemedTxns": true,
   "addressProviderId": "1237800298651584417",
-  "businessName": "deku",
+  "businessName": "Setu",
   "businessType": "PROPRIETARY",
   "callbackURLsEnabled": true,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "documentStatus": "APPROVED",
-  "franchiseName": "deku",
+  "franchiseName": "Setu",
   "genre": "ONLINE",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-  "legalName": "deku",
+  "legalName": "BrokenTusk Technologies Pvt Ltd",
   "mcc": "5432",
-  "merchantName": "deku",
-  "merchantType": "small",
-  "on-boardingType": "bank",
+  "merchantType": "large",
+  "onboardingType": "aggregator",
   "paId": "1237799847336085408",
   "paymentModes": [
     "savings",
@@ -145,13 +143,13 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
     "rupay_cc"
   ],
   "products": [
-    "deeplinks",
-    "sqr",
-    "mqr"
+    "autopay",
+    "pay_singe_tpv",
+    "pay_multi",
+    "pay_single"
   ],
    "vpaHandles": [
-    "okaxis",
-    "okhdfc"
+    "pineaxis"
   ],
   "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22"
   "transactionStatus": "active"
