--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -88,7 +88,7 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
 <CodeBlockWithCopy language="json">
   {`{
     "merchantReferenceId": "1240689979139556557",
-    "vpa": "deku@okokaxis"
+    "vpa": "fastestupi@pineaxis"
 }`}
 </CodeBlockWithCopy>
 
@@ -102,7 +102,7 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantReferenceId": "1240689979139556557",
   "status": "active",
-  "vpa": "deku@okokaxis"
+  "vpa": "fastestupi@pineaxis"
 }`}
 </CodeBlockWithCopy>
 
