--- a/content/payments/umap/notifications/customer-vpa-verification.mdx
+++ b/content/payments/umap/notifications/customer-vpa-verification.mdx
@@ -45,7 +45,7 @@ These statuses are relevant for the VPA verification done under the <a href="/pa
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   "customerVpa": "deku20231030@okokaxis",
+   "customerVpa": "deku20231030@pineaxis",
    "customerName": "dekup",
    "customerAccountType": "SAVINGS", // SAVINGS, CREDIT,...
    "reason": {}
@@ -71,7 +71,7 @@ These statuses are relevant for the VPA verification done under the <a href="/pa
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   "customerVpa": "deku20231030@okokaxis",
+   "customerVpa": "deku20231030@pineaxis",
    "reason": {}
 }`}
           </CodeBlockWithCopy>
@@ -94,7 +94,7 @@ These statuses are relevant for the VPA verification done under the <a href="/pa
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-   "customerVpa": "deku20231030@okokaxis",
+   "customerVpa": "deku20231030@pineaxis",
    "reason": {}
 }`}
           </CodeBlockWithCopy>
