--- a/content/payments/umap/notifications/payments.mdx
+++ b/content/payments/umap/notifications/payments.mdx
@@ -13,6 +13,14 @@ Any UMAP product relies on creating and presenting payment request to a customer
   alt="Bridge"
 />
 
+| **Payment statuses** | **Description**                                               |
+| -------------------------------- | ------------------------------------------------- |
+| `payment.initiated`              | Payment has been attempted by a customer          |
+| `payment.ending`                 | Payment is currently being processed by UMAP      |
+| `payment.success`                | Payment has been successfully completed           |
+| `payment.failed`                 | Payment could not be processed                    |
+
+
 <Callout type="warning">
     The order of the payment notifications cannot be guaranteed. For example, a client might receive a <code>payment.success</code> notification before a <code>payment.initiated</code> is sent.
 </Callout>
@@ -83,8 +91,8 @@ For TPV, these are the additional attributes in the notification spec -
    "txnNote": "testpay",
    "amount": 1000,
    "currency": "INR",
-   "merchantVpa": "deku20231030@okokaxis",
-   "customerVpa": "test-auto-9xsabx8n8x@okokaxis",
+   "merchantVpa": "deku20231030@pineaxis",
+   "customerVpa": "test-auto-9xsabx8n8x@pineaxis",
    "customerAccountType": "SAVINGS", // SAVINGS, CREDIT,...
    //  TPV attributes
    “tpv”: {
@@ -137,8 +145,8 @@ For TPV, these are the additional attributes in the notification spec -
    "txnNote": "testpay",
    "amount": 1000,
    "currency": "INR",
-   "merchantVpa": "deku20231030@okokaxis",
-   "customerVpa": "test-auto-9xsabx8n8x@okokaxis",
+   "merchantVpa": "deku20231030@pineaxis",
+   "customerVpa": "test-auto-9xsabx8n8x@pineaxis",
    "customerAccountType": "SAVINGS", // SAVINGS, CREDIT,...
    //  TPV attributes
    “tpv”: {
@@ -195,8 +203,8 @@ For TPV, these are the additional attributes in the notification spec -
    "txnNote": "testpay",
    "amount": 1000,
    "currency": "INR",
-   "merchantVpa": "deku20231030@okokaxis",
-   "customerVpa": "test-auto-9xsabx8n8x@okokaxis",
+   "merchantVpa": "deku20231030@pineaxis",
+   "customerVpa": "test-auto-9xsabx8n8x@pineaxis",
    "customerAccountType": "SAVINGS", // SAVINGS, CREDIT,...
    //  TPV attributes
    “tpv”: {
@@ -253,8 +261,8 @@ For TPV, these are the additional attributes in the notification spec -
    "txnNote": "testpay",
    "amount": 1000,
    "currency": "INR",
-   "merchantVpa": "deku20231030@okokaxis",
-   "customerVpa": "test-auto-9xsabx8n8x@okokaxis",
+   "merchantVpa": "deku20231030@pineaxis",
+   "customerVpa": "test-auto-9xsabx8n8x@pineaxis",
    "customerAccountType": "SAVINGS", // SAVINGS, CREDIT,...
    //  TPV attributes
    “tpv”: {
