--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -33,13 +33,12 @@ UMAP has consistent and transparent payment statuses across all transaction flow
   alt="Bridge"
 />
 
-`payment_initiated`&nbsp;Payment has been attempted by a customer. 
-
-`payment_ending`&nbsp;Payment is currently being processed by UMAP. 
-
-`payment_successful`&nbsp;Payment has been successfully completed. 
-
-`payment_failed`&nbsp;Payment could not be processed. 
+| **Payment statuses** | **Description**                                               |
+| -------------------------------- | ------------------------------------------------- |
+| `payment.initiated`              | Payment has been attempted by a customer          |
+| `payment.ending`                 | Payment is currently being processed by UMAP      |
+| `payment.success`                | Payment has been successfully completed           |
+| `payment.failed`                 | Payment could not be processed                    |
 
 <br/>
 
