--- a/content/payments/umap/payments/collect/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect/create-collect-request.mdx
@@ -68,10 +68,10 @@ This API can be used to create a collect request that initiates a UPI transactio
   {`{
     "amount": 10000,
     "currency": "INR",
-    "customerVpa": "dekup@okhdfc",
+    "customerVpa": "ram@okhdfc",
     "expireAfter": 2,
     "merchantReferenceId": "1240689979139556557",
-    "merchantVpa": "deku@okokaxis",
+    "merchantVpa": "fastestupi@pineaxis",
     "metadata": {
         "InvoiceNumber": "INV-21-12-009"
     },
@@ -93,12 +93,12 @@ This API can be used to create a collect request that initiates a UPI transactio
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
-  "customerVpa": "dekup@okhdfc",
+  "customerVpa": "ram@okhdfc",
   "expireAfter": 2,
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantReferenceId": "1240689979139556557",
-  "merchantVpa": "deku@okokaxis",
+  "merchantVpa": "fastestupi@pineaxis",
   "metadata": {
     "InvoiceNumber": "INV-21-12-009"
   },
@@ -176,12 +176,12 @@ Since collect request directly initiates a transaction on customer's UPI app. Th
   "closedAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
-  "customerVpa": "dekup@okhdfc",
+  "customerVpa": "ram@okhdfc",
   "expireAfter": 2,
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantReferenceId": "1240689979139556557",
-  "merchantVpa": "deku@okokaxis",
+  "merchantVpa": "fastestupi@pineaxis",
   "metadata": {
     "InvoiceNumber": "INV-21-12-009"
   },
