--- a/content/payments/umap/payments/collect/verify-customer-vpa-api.mdx
+++ b/content/payments/umap/payments/collect/verify-customer-vpa-api.mdx
@@ -73,7 +73,7 @@ visible_in_sidebar: true
 
 <CodeBlockWithCopy language="json">
   {`{
-    "customerVpa": "dekup@okokaxis",
+    "customerVpa": "dekup@pineaxis",
     "merchantReferenceId": "1240689979139556557"
 }`}
 </CodeBlockWithCopy>
