--- a/content/payments/umap/payments/flash/create-payment-link.mdx
+++ b/content/payments/umap/payments/flash/create-payment-link.mdx
@@ -83,7 +83,7 @@ visible_in_sidebar: true
   "currency": "INR",
   "expiryDate": "2023-09-04 12:08:20.202644 +0530 IST",
   "merchantReferenceId": "1240689979139556557",
-  "merchantVpa": "deku@okokaxis",
+  "merchantVpa": "fastestupi@pineaxis",
   "metadata": {
       "InvoiceNumber": "INV-21-12-009"
   },
@@ -118,7 +118,7 @@ visible_in_sidebar: true
   "currency": "INR",
   "expiryDate": "2023-09-04 12:08:20.202644 +0530 IST",
   "merchantReferenceId": "1240689979139556557",
-  "merchantVpa": "deku@okokaxis",
+  "merchantVpa": "fastestupi@pineaxis",
   "metadata": {
       "InvoiceNumber": "INV-21-12-009"
   },
@@ -158,7 +158,7 @@ visible_in_sidebar: true
     "intentLink":"upi://pay?pa=test-auto-pgruosncak@okokax..."
     "merchantId":"01ARZ3NDEKTSV4RRFFQ69G5FAV"
     "merchantReferenceId":"1240689979139556557"
-    "merchantVpa":"deku@okokaxis"
+    "merchantVpa":"fastestupi@pineaxis"
     "metadata":{
         "InvoiceNumber":"INV-21-12-009"
     }
@@ -255,10 +255,10 @@ visible_in_sidebar: true
   "currency": "INR",
   "expiryDate": "2023-09-04 12:08:20.202644 +0530 IST",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-  "intentLink": "upi://pay?pa=test-auto-pgruosncak@okokaxis&pn=merchant-4&am=100.00&tr=SU1240659756905923780&tn=sample%20single%20use%20qr&cu=INR&mc=1234",
+  "intentLink": "upi://pay?pa=test-auto-pgruosncak@pineaxis&pn=merchant-4&am=100.00&tr=SU1240659756905923780&tn=sample%20single%20use%20qr&cu=INR&mc=1234",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantReferenceId": "1240689979139556557",
-  "merchantVpa": "deku@okokaxis",
+  "merchantVpa": "fastestupi@pineaxis",
   "metadata": {
     "InvoiceNumber": "INV-21-12-009"
   },
