--- a/content/payments/umap/payments/tpv/check-status.mdx
+++ b/content/payments/umap/payments/tpv/check-status.mdx
@@ -67,11 +67,11 @@ visible_in_sidebar: true
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
   "customerAccountType": "savings",
-  "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
+  "customerVpa": "test-auto-tyvmm59i9b@pineaxis",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-  "merchantVpa": "test-auto-beibfev2oq@okokaxis",
+  "merchantVpa": "test-auto-beibfev2oq@pineaxis",
   "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "reason": {
     "code": "unable-to-fulfill-request",
