--- a/content/payments/umap/payments/tpv/create-tpv.mdx
+++ b/content/payments/umap/payments/tpv/create-tpv.mdx
@@ -68,7 +68,7 @@ The merchant generates a payment link. This unique link serves as the gateway fo
     "expireAfter": 10,
     "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
     "merchantReferenceId": "1240689979139556556",
-    "merchantVpa": "deku@okokaxis",
+    "merchantVpa": "fastestupi@pineaxis",
     "metadata": "test",
     "minAmount": 100,
     "primaryAccount": {
