--- a/content/payments/umap/mandates/one-shot/check-status.mdx
+++ b/content/payments/umap/mandates/one-shot/check-status.mdx
@@ -68,11 +68,11 @@ The merchant can use the **<i>check status API</i>** to check mandate payment st
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
   "customerAccountType": "savings",
-  "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
+  "customerVpa": "test-auto-tyvmm59i9b@pineaxis",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-  "merchantVpa": "test-auto-beibfev2oq@okokaxis",
+  "merchantVpa": "test-auto-beibfev2oq@pineaxis",
   "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "refId": "1240689979139556558",
   "rrn": "124068997913",
