--- a/content/data/bav/analyse-vpa/quickstart.mdx
+++ b/content/data/bav/analyse-vpa/quickstart.mdx
@@ -27,9 +27,8 @@ Here are the URLs you would need for this integration—
     scenarios. Use the below values to get specific responses from the{" "}
     <strong>Analyse VPA API</strong> API.{" "}
 
--   **individual@setu**—Valid individual's VPA
--   **merchant@setu**—Valid merchant's VPA
--   **xyz@setu**— Invalid VPA
+-   **9617983783@paytm**—Valid individual's VPA
+
 
 </Callout>
 
